config-step-6-vaultapp/base/vault/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ui
spec:
  entryPoints:
    - http
    - https
  routes:
    - match: Host(`vault.milantech.live`)
      kind: Rule
      services:
        - name: vault
          port: 8200
