config-step-6-vaultapp/base/vault/vault-ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ui
  namespace: realtime-stg
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    # defines controller implementing this ingress resource: https://docs.microsoft.com/en-us/azure/dev-spaces/how-to/ingress-https-traefik
    # ingress.class annotation is being deprecated in Kubernetes 1.18: https://kubernetes.io/docs/concepts/services-networking/ingress/#deprecated-annotation
    # For backwards compatibility, when this annotation is set, precedence is given over the new field ingressClassName under spec.
    # kubernetes.io/ingress.class: traefik-internal
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.options: default
    traefik.ingress.kubernetes.io/router.tls.certresolver: "acmeresolver"
    traefik.ingress.kubernetes.io/frontend-entry-points: "https"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # traefik.ingress.kubernetes.io/router.middlewares: app-gateway-snet@file, gzip-compress@file
spec:
  ingressClassName: traefik
  rules:
  - host: vault.milantech.live
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8200
        path: /*
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - vault.milantech.live
    secretName: vault-milantech-live-tls
